--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
-}
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
+  color: aliceblue;
+  background-color: rgb(0, 162, 255);
 }
 
-.App-link {
-  color: #61dafb;
+.main-header {
+  font-family: "Montserrat", sans-serif;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form label,
+h3 {
+  color: blue !important;
+  font-family: "Montserrat", sans-serif;
+  font-size: 15px !important;
+  margin-top: 15px;
+}
+.header {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.8rem 10rem;
+  color: whitesmoke;
+  width: 100vw;
+  background-color: white;
+  text-decoration: none;
+  margin-top: 10px;
 }
